@@ -13,6 +13,8 @@ module NewRelic::Agent::Configuration
       assert_applied_string 'NEWRELIC_DISPATCHER', 'dispatcher'
       assert_applied_string 'NEW_RELIC_FRAMEWORK', 'framework'
       assert_applied_string 'NEWRELIC_FRAMEWORK', 'framework'
+      assert_applied_string 'NEW_RELIC_HOST', 'host'
+      assert_applied_string 'NEW_RELIC_PORT', 'port'
     end
 
     def test_environment_booleans_truths_are_applied
